--- a/WithMe/pom.xml
+++ b/WithMe/pom.xml
@@ -12,10 +12,13 @@
 	<groupId>com.example</groupId>
 	<artifactId>WithMe</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>WithMe</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
+		<frontend-src-dir>${project.basedir}/../withme_front</frontend-src-dir>
+		<frontend-maven-plugin.version>1.12.1</frontend-maven-plugin.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -99,6 +102,76 @@
 						</exclude>
 					</excludes>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<testFailureIgnore>true</testFailureIgnore>
+				</configuration>
+			</plugin>
+
+			<!-- React를 빌드하기 위한 패키지 -->
+			<plugin>
+				<groupId>com.github.eirslett</groupId>
+				<artifactId>frontend-maven-plugin</artifactId>
+				<version>1.12.1</version> <!-- frontend-maven-plugin Version -->
+				<configuration>
+					<workingDirectory>${project.basedir}/../withme_front</workingDirectory> <!-- React JS 가 설치된 디렉토리 -->
+					<installDirectory>target</installDirectory> <!-- war & jar 가 생성되는 메이븐 빌드의 타겟 디렉토리 -->
+				</configuration>
+				<executions>
+					<execution>
+						<id>install node and npm</id>
+						<goals>
+							<goal>install-node-and-npm</goal> <!-- node & npm 설치 -->
+						</goals>
+						<configuration>
+							<nodeVersion>v18.16.0</nodeVersion> <!-- 설치할 nodeJs 의 버전 -->
+							<npmVersion>9.5.1</npmVersion>  <!-- 설치할 npm 의 버전 -->
+						</configuration>
+					</execution>
+					<execution>
+						<id>npm install</id>    <!-- npm install 로 package.json 의 모듈을 설치한다. -->
+						<goals>
+							<goal>npm</goal>
+						</goals>
+						<configuration>
+							<arguments>install</arguments>
+						</configuration>
+					</execution>
+					<execution>
+						<id>npm run build</id>  <!-- React Js Build -->
+						<goals>
+							<goal>npm</goal>
+						</goals>
+						<configuration>
+							<arguments>run build</arguments>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>position-react-build</id>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<phase>prepare-package</phase>
+						<configuration>            <!-- Spring boot의 html 파일 경로 -->
+							<outputDirectory>${project.build.outputDirectory}/static</outputDirectory>
+							<resources>
+								<resource>
+									<directory>${frontend-src-dir}/build</directory>
+									<filtering>false</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
