--- a/withme_front/package.json
+++ b/withme_front/package.json
@@ -23,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "agjibuild": "react-scripts build && xcopy /y /i /e build C:\\Java\\STSWorkspace\\WithMe_Boot\\WithMe\\src\\main\\resources\\static"
   },
   "eslintConfig": {
     "extends": [
