--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,12 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
+
+    # application.yml 파일 생성
+    - uses: actions/checkout@v4
+    - run: touch ./src/main/resources/application.yml
+    - run: echo "${{ secrets.APPLICATION_YML }}" > ./src/main/resources/application.yml
+        
     - name: Build with Maven
       run: mvn -B package --file WithMe/pom.xml
 
