--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,8 +28,11 @@ jobs:
 
     # application.yml 파일 생성
     - uses: actions/checkout@v4
-    - run: touch ./WithMe/src/main/resources/application.yml
-    - run: echo "${{ secrets.APPLICATION_YML }}" > ./WithMe/src/main/resources/application.yml
+    - run: |
+        mkdir ./WithMe/src/main/resources
+        cd ./WithMe/src/main/resources
+        touch ./application.yml
+    - run: echo "${{ secrets.APPLICATION_YML }}" > ./application.yml
         
     - name: Build with Maven
       run: mvn -B package --file WithMe/pom.xml
