--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,8 +29,9 @@ jobs:
     # application.yml 파일 생성
     - uses: actions/checkout@v4
     - run: |
-        mkdir ./WithMe/src/main/resources
-        cd ./WithMe/src/main/resources
+        mkdir ./src/main/resources
+        cd ./src/main/resources
+        ls
         touch ./application.yml
     - run: echo "${{ secrets.APPLICATION_YML }}" > ./application.yml
         
