--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,9 +29,8 @@ jobs:
     # application.yml 파일 생성
     - uses: actions/checkout@v4
     - run: |
-        mkdir ./src/main/resources
-        cd ./src/main/resources
-        ls
+        mkdir ./WithMe/src/main/resources
+        cd ./WithMe/src/main/resources
         touch ./application.yml
     - run: echo "${{ secrets.APPLICATION_YML }}" > ./application.yml
         
